# bonk

./: .envrc  .eslintrc.js  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  count_lines.py  flake.nix  next.config.js  notes.md  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/crates/bonk-ast/: Cargo.toml
src-tauri/crates/bonk-ast-errorless/: Cargo.toml
src-tauri/crates/bonk-ast-errorless/src/: convert.rs  lib.rs  ser.rs
src-tauri/crates/bonk-ast/src/: lib.rs
src-tauri/crates/bonk-csv/: Cargo.toml
src-tauri/crates/bonk-csv/src/: lib.rs  main.rs
src-tauri/crates/bonk-db/: Cargo.toml
src-tauri/crates/bonk-db/src/: lib.rs
src-tauri/crates/bonk-import/: Cargo.toml
src-tauri/crates/bonk-import/src/: lib.rs
src-tauri/crates/bonk-lang/: Cargo.toml  test.bonk
src-tauri/crates/bonk-lang-parser/: Cargo.toml
src-tauri/crates/bonk-lang-parser/src/: grammar.lalrpop  lexer.rs  lib.rs  tree.rs
src-tauri/crates/bonk-lang/src/: ast.rs  grammar.lalrpop  lexer.rs  main.rs  parse.rs  parser.rs  types.rs
src-tauri/crates/bonk-lsp/: Cargo.toml  test.sh
src-tauri/crates/bonk-plaid/: Cargo.toml
src-tauri/crates/bonk-plaid/src/: index.html  main.rs
src-tauri/crates/finance-app/: Cargo.toml
src-tauri/crates/finance-app/src/: commands.rs  db.rs  main.rs
src-tauri/crates/finance-app/src/dashboard/: mod.rs
src-tauri/crates/plaid/: Cargo.toml  generate.sh
src-tauri/crates/plaid/.openapi-generator/: FILES
src-tauri/crates/plaid/src/: lib.rs
src-tauri/crates/plaid/src/apis/: configuration.rs  mod.rs  plaid_api.rs
src-tauri/crates/plaid/src/models/: account_access.rs  account_assets.rs  account_assets_all_of.rs  account_balance.rs  account_base.rs  account_filter.rs  account_filters_response.rs  account_identity.rs  account_identity_match_score.rs  account_identity_match_score_all_of.rs  account_product_access.rs  account_product_access_nullable.rs  account_selection_cardinality.rs  account_subtype.rs  account_type.rs  accounts_balance_get_request.rs  accounts_balance_get_request_options.rs  accounts_get_request.rs  accounts_get_request_options.rs  accounts_get_response.rs  ach_class.rs  action_state.rs  activity.rs  activity_type.rs  address.rs  address_data.rs  address_data_not_required.rs  address_data_nullable.rs  address_data_nullable_no_required_fields.rs  address_match_score.rs  address_nullable.rs  address_purpose_label.rs  application.rs  application_get_request.rs  application_get_response.rs  apr.rs  asset.rs  asset_detail.rs  asset_holder.rs  asset_holder_name.rs  (+1339 more)
src-tauri/crates/tree-sitter-bonk/: Cargo.toml  binding.gyp  grammar.js  package.json
src-tauri/crates/tree-sitter-bonk/bindings/node/: binding.cc
src-tauri/crates/tree-sitter-bonk/bindings/rust/: lib.rs
src-tauri/crates/tree-sitter-bonk/corpus/: accounts.txt  amounts.txt  dates.txt  descriptions.txt
src-tauri/crates/tree-sitter-bonk/src/: grammar.json  node-types.json  parser.c
src-tauri/src/: commands.rs  db.rs  main.rs
src-tauri/src/dashboard/: mod.rs
src-tauri/src/import/: import_csv.rs  mod.rs
src-tauri/src/import_transactions/: id.rs  import_csv.rs  mod.rs  venmo.rs
src/rust/: Cargo.toml
src/rust/bonk-ast/: Cargo.toml  test.bonk
src/rust/bonk-ast-errorless/: Cargo.toml
src/rust/bonk-ast-errorless/src/: convert.rs  lib.rs  ser.rs
src/rust/bonk-ast/src/: lib.rs
src/rust/bonk-cfg/: Cargo.toml
src/rust/bonk-cfg/src/: dashboard.rs  lib.rs  query.rs  test.rs
src/rust/bonk-cfg/tests/: integration_test.rs
src/rust/bonk-chat/: Cargo.toml  Modelfile
src/rust/bonk-chat/src/: lib.rs
src/rust/bonk-check/: Cargo.toml
src/rust/bonk-check/src/: account_ref.rs  balance.rs  builtins.rs  cli.rs  declare_account.rs  import.rs  lib.rs  main.rs  single_infer.rs  syntax.rs  test.rs  todo.rs  util.rs
src/rust/bonk-cli/: Cargo.toml
src/rust/bonk-cli/src/: main.rs
src/rust/bonk-csv/: Cargo.toml
src/rust/bonk-csv/src/: cli.rs  lib.rs  main.rs
src/rust/bonk-dashboard/: Cargo.toml
src/rust/bonk-dashboard/src/: lib.rs
src/rust/bonk-db/: Cargo.toml
src/rust/bonk-db/example/: ledger.bonk
src/rust/bonk-db/src/: cli.rs  lib.rs  main.rs
src/rust/bonk-db/tests/: integration_test.rs
src/rust/bonk-http/: Cargo.toml
src/rust/bonk-http/src/: cli.rs  get_dashboard.rs  get_dashboard_names.rs  get_transactions.rs  lib.rs  main.rs  query_transactions.rs  query_transactions_for_chart.rs  render_query_template.rs  watch.rs
src/rust/bonk-http/src/handler/: chat.rs  get_dashboard.rs  get_dashboard_names.rs  get_query.rs  get_query_names.rs  get_transactions.rs  live_reload.rs  mod.rs  query_transactions.rs  query_transactions_for_chart.rs  render_query_template.rs
src/rust/bonk-lsp/: Cargo.toml
src/rust/bonk-lsp/src/: cli.rs  code_actions.rs  complete.rs  diagnostic.rs  go_to_def.rs  lib.rs  main.rs  reference.rs  state.rs  util.rs
src/rust/bonk-parse/: Cargo.toml
src/rust/bonk-parse/src/: ast.rs  lib.rs  util.rs
src/rust/bonk-plaid/: Cargo.toml
src/rust/bonk-plaid/src/: cli.rs  lib.rs  main.rs
src/rust/bonk-query/: Cargo.toml
src/rust/bonk-query/src/: cli.rs  lib.rs  main.rs
src/rust/bonk-sort/: Cargo.toml
src/rust/bonk-sort/src/: cli.rs  lib.rs  main.rs
src/rust/bonk-test/: Cargo.toml
src/rust/bonk-test/src/: cli.rs  lib.rs  main.rs
src/rust/bonk-workspace/: Cargo.toml
src/rust/bonk-workspace/example/: Bonk.toml
src/rust/bonk-workspace/src/: lib.rs
src/rust/bonk-workspace/tests/: integration_test.rs
src/rust/plaid/: .openapi-generator-ignore  Cargo.toml  generate.sh
src/rust/plaid/.openapi-generator/: FILES
src/rust/plaid/src/: lib.rs
src/rust/plaid/src/apis/: configuration.rs  plaid_api.rs
src/rust/plaid/src/models/: account_access.rs  account_assets.rs  account_balance.rs  account_base.rs  account_filter.rs  account_filters_response.rs  account_holder_category.rs  (+1687 more)
src/rust/tree-sitter-bonk/: Cargo.toml  grammar.js
src/rust/tree-sitter-bonk/corpus/: ledgers.txt
src/rust/tree-sitter-bonk/src/: grammar.json  node-types.json  parser.c
(+169 files in other folders)
