[package]
name = "finance-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
chrono = "0.4.22"
csv = "1.1.6"
futures-util = "0.3.24"
serde = { version = "1.0.144", features = [ "derive" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }

