[package]
name = "finance-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.106"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = { version = "0.4.30", features = ["serde"] }
csv = "1.2.2"
glob = "0.3.1"
lazy_static = "1.4.0"
sqlite = "0.31.1"
tauri = { version = "1.4.0", features = ["cli"] }
toml = "0.8.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
