[workspace]
members = [
    "bonk-ast-errorless",
    "bonk-cfg",
    "bonk-check",
    "bonk-cli",
    "bonk-csv",
    "bonk-db",
    "bonk-http",
    "bonk-lsp",
    "bonk-parse",
    "bonk-plaid",
    "bonk-query",
    "bonk-test",
    "bonk-workspace",
    "plaid",
    "tree-sitter-bonk",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
itertools = "0.12.0"
clap = { version = "4.4.13", features = ["derive"] }
anyhow = "1.0.80"
csv = "1.2.2"
toml = "0.8.8"
sqlite = "0.32.0"
sqlite3-sys = "0.15.2"
rouille = "3.6.2"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
prettytable-rs = "0.10.0"
tree-sitter = "~0.20.10"
reqwest = "~0.9"
webbrowser = "0.8.12"
glob = "0.3.1"
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
notify-debouncer-full = "0.3.1"
futures = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }

bonk-ast-errorless = { path = "./bonk-ast-errorless" }
bonk-cfg = { path = "./bonk-cfg" }
bonk-check = { path = "./bonk-check" }
bonk-cli = { path = "./bonk-cli" }
bonk-csv = { path = "./bonk-csv" }
bonk-db = { path = "./bonk-db" }
bonk-http = { path = "./bonk-http" }
bonk-lsp = { path = "./bonk-lsp" }
bonk-parse = { path = "./bonk-parse" }
bonk-plaid = { path = "./bonk-plaid" }
bonk-query = { path = "./bonk-query" }
bonk-test = { path = "./bonk-test" }
bonk-workspace = { path = "./bonk-workspace" }
plaid = { path = "./plaid" }
tree-sitter-bonk = { path = "./tree-sitter-bonk" }