[package]
name = "bonk-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonk-ast-errorless = { path = "../bonk-ast-errorless" }
bonk-parse = { path = "../bonk-parse" }
bonk-workspace = { path = "../bonk-workspace" }
itertools = "0.12.0"

[dev-dependencies]
tree-sitter = "~0.20.10"
insta = "1.34.0"
