[package]
name = "bonk-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonk-ast-errorless.workspace = true
bonk-parse.workspace = true
bonk-workspace.workspace = true
itertools.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tree-sitter = "~0.20.10"
insta = "1.34.0"
