[package]
name = "bonk-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bonk-csv = { path = "../bonk-csv" }
bonk-db = { path = "../bonk-db" }
bonk-http = { path = "../bonk-http" }
bonk-lsp = { path = "../bonk-lsp" }
bonk-plaid = { path = "../bonk-plaid" }
clap = { version = "4.4.13", features = ["derive"] }
