[package]
name = "bonk-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bonk-check.workspace = true
bonk-csv.workspace = true
bonk-db.workspace = true
bonk-http.workspace = true
bonk-lsp.workspace = true
bonk-plaid.workspace = true
clap.workspace = true
