[package]
name = "bonk-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bonk-ast-errorless = { path = "../bonk-ast-errorless" }
clap = { version = "4.4.13", features = ["derive"] }
csv = "1.2.2"
serde = { version = "1.0.195", features = ["derive"] }

[dev-dependencies]
insta = "1.34.0"
