[package]
name = "bonk-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bonk-ast-errorless.workspace = true
clap.workspace = true
csv.workspace = true
serde.workspace = true

[dev-dependencies]
insta = "1.34.0"
