[package]
name = "bonk-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonk-ast = { path = "../bonk-ast" }
bonk-ast-errorless = { path = "../bonk-ast-errorless" }
bonk-check = { path = "../bonk-check" }
clap = { version = "4.4.13", features = ["derive"] }
sqlite = "0.32.0"
sqlite3-sys = "0.15.2"
