[package]
name = "bonk-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bonk-ast-errorless.workspace = true
bonk-check.workspace = true
bonk-parse.workspace = true
bonk-workspace.workspace = true
clap.workspace = true
sqlite.workspace = true
sqlite3-sys.workspace = true
