[package]
name = "bonk-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonk-check = { path = "../bonk-check" }
bonk-db = { path = "../bonk-db" }
bonk-parse = { path = "../bonk-parse" }
bonk-workspace = { path = "../bonk-workspace" }
clap = { version = "4.4.18", features = ["derive"] }
rouille = "3.6.2"
serde = { version = "1.0.196", features = ["derive"] }
