[package]
name = "bonk-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bonk-check.workspace = true
bonk-db.workspace = true
bonk-parse.workspace = true
bonk-workspace.workspace = true
clap.workspace = true
rouille.workspace = true
serde.workspace = true
sqlite.workspace = true # TODO: sqlite should be an implementation detail of bonk-db
bonk-dashboard.workspace = true
