[package]
name = "bonk-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
bonk-cfg.workspace = true
bonk-chat.workspace = true
bonk-check.workspace = true
bonk-db.workspace = true
bonk-parse.workspace = true
bonk-workspace.workspace = true
clap.workspace = true
futures.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
sqlite.workspace = true # TODO: sqlite should be an implementation detail of bonk-db
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
