[package]
name = "bonk-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bonk-ast-errorless = { path = "../bonk-ast-errorless" }
bonk-check = { path = "../bonk-check" }
bonk-parse = { path = "../bonk-parse" }
bonk-workspace = { path = "../bonk-workspace" }
clap = { version = "4.4.13", features = ["derive"] }
lsp-server = "0.7.6"
lsp-types = "0.95.0"
serde = "1.0.194"
serde_json = "1.0.111"
