[package]
name = "bonk-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bonk-ast-errorless.workspace = true
bonk-check.workspace = true
bonk-parse.workspace = true
bonk-workspace.workspace = true
clap.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
