[package]
name = "bonk-plaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plaid = { path = "../plaid" }
bonk-ast-errorless = { path = "../bonk-ast-errorless" }
serde = "1.0.195"
rouille = "3.6.2"
reqwest = "~0.9"
webbrowser = "0.8.12"
clap = { version = "4.4.13", features = ["derive"] }
anyhow = "1.0.80"
