[package]
name = "bonk-plaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plaid.workspace = true
bonk-ast-errorless.workspace = true
serde.workspace = true
rouille.workspace = true
reqwest.workspace = true
webbrowser.workspace = true
clap.workspace = true
anyhow.workspace = true
