[package]
name = "bonk-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bonk-ast-errorless.workspace = true
bonk-check.workspace = true
bonk-db.workspace = true
bonk-parse.workspace = true
bonk-workspace.workspace = true
clap.workspace = true
prettytable-rs.workspace = true
serde.workspace = true
sqlite.workspace = true
